# TellxUs

DRF/: .env.sample  README.md  db.sqlite3  pyproject.toml
DRF/Articles/: asgi.py  settings.py  urls.py
DRF/Articles_API/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
DRF/Articles_API/migrations/: 0001_initial.py  0002_initial.py
DRF/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
DRF/accounts/migrations/: 0001_initial.py
NEXT/tellme/: package.json
NEXT/tellme/pages/: index.js
NEXT/tellme/public/: Bashar+Taamneh+Covering+Letter.docx  auth.txt
tellxusapp/: .gitignore  package-lock.json
tellxusapp/components/: Footer.jsx  Header.jsx  Paswordreset.jsx  Profil.jsx  Signin.jsx
tellxusapp/contexts/: auth.js
tellxusapp/pages/: Resetpassword.jsx  Signinpage.jsx  _app.tsx  index.tsx
